--- a/css/styles.css
+++ b/css/styles.css
@@ -6,38 +6,38 @@ body,
 td,
 th,
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    color: #333;
-    line-height: 1.5;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 10pt;
+	color: #333;
+	line-height: 1.5;
 }
 
 body {
-    width: 100%;
-    margin: 0;
-    background-color: #fdfdfd;
+	width: 100%;
+	margin: 0;
+	background-color: #fdfdfd;
 }
 
 ul,
 li {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    color: #333;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 10pt;
+	color: #333;
 }
 
 a {
-    color: orange;
-    text-decoration: none;
+	color: orange;
+	text-decoration: none;
 }
 
 a:hover,
 a:focus {
-    color: #3397db;
-    text-decoration: none;
+	color: #3397db;
+	text-decoration: none;
 }
 
 a img {
-    border: none 0px #fff;
+	border: none 0px #fff;
 }
 
 h1,
@@ -46,8 +46,8 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 0 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	margin: 0 0 20px;
 }
 
 article,
@@ -62,305 +62,383 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+	display: block;
 }
 
 #maincontent {
-    background-color: #f3f3f3;
-    min-height: 100%;
+	background-color: #f3f3f3;
+	min-height: 100%;
 }
 
 #footer {
-    width: 100%;
-    font-size: 0.9em;
-    letter-spacing: 0.2em;
-    background-color: #444;
-    color: #aaa;
-    padding: 25px;
-    text-align: center;
-    text-transform: uppercase;
-    box-sizing: border-box;
+	width: 100%;
+	font-size: 0.9em;
+	letter-spacing: 0.2em;
+	background-color: #444;
+	color: #aaa;
+	padding: 25px;
+	text-align: center;
+	text-transform: uppercase;
+	box-sizing: border-box;
 }
 
 
 /* ====================== Navigation ====================== */
 
 nav {
-    width: 100%;
-    padding: 20px 0px;
-    background-color: #252831;
+	width: 100%;
+	padding: 20px 0px;
+	background-color: #252831;
 }
 
 nav h1 {
-    margin: auto;
-    padding: 20px 5px;
-    text-align: center;
+	margin: auto;
+	padding: 20px 5px;
+	text-align: center;
 }
 
 nav h1 a {
-    color: #fff;
-    font-size: 14pt;
-    font-weight: 200;
-    letter-spacing: 10px;
-    text-transform: uppercase;
+	color: #fff;
+	font-size: 14pt;
+	font-weight: 200;
+	letter-spacing: 10px;
+	text-transform: uppercase;
 }
 
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
+	padding: 10px 40px 16px;
+	list-style: none;
+	background-color: #eee;
+	font-size: 17px;
+	margin: 0;
 }
 
 
 /* Display list items side by side */
 
 #breadcrumb li {
-    display: inline;
+	display: inline;
 }
 
 
 /* Add a slash symbol (/) before/behind each list item */
 
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+	padding: 8px;
+	color: black;
+	content: "/\00a0";
 }
 
 
 /* Add a color to all links inside the list */
 
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+	color: #0275d8;
+	text-decoration: none;
 }
 
 
 /* Add a color on mouse-over */
 
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+	color: #01447e;
+	text-decoration: underline;
 }
 
 
 /* ====================== Map ====================== */
 
 #map {
-    height: 400px;
-    width: 100%;
-    background-color: #ccc;
+	height: 400px;
+	width: 100%;
+	background-color: #ccc;
 }
 
 
 /* ====================== Restaurant Filtering ====================== */
 
 .filter-options {
-    width: 100%;
-    height: 50px;
-    background-color: #3397DB;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+	width: 100%;
+	height: 50px;
+	background-color: #3397DB;
+	align-items: center;
+	display: flex;
+	justify-content: center;
 }
 
 .filter-options h2 {
-    color: white;
-    font-size: 1rem;
-    font-weight: normal;
-    line-height: 1;
-    margin: 0 20px;
+	color: white;
+	font-size: 1rem;
+	font-weight: normal;
+	line-height: 1;
+	margin: 0 20px;
+	display: inline;
 }
 
 .filter-options select {
-    background-color: white;
-    border: 1px solid #fff;
-    font-family: Arial, sans-serif;
-    font-size: 11pt;
-    height: 35px;
-    letter-spacing: 0;
-    margin: 10px;
-    padding: 0 10px;
-    width: 200px;
+	background-color: white;
+	border: 1px solid #fff;
+	font-family: Arial, sans-serif;
+	font-size: 11pt;
+	height: 35px;
+	letter-spacing: 0;
+	margin: 10px;
+	padding: 0 10px;
+	width: 200px;
 }
 
 
 /* ====================== Restaurant Listing ====================== */
 
 #restaurants-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: #f3f3f3;
-    list-style: outside none none;
-    margin: 0;
-    padding: 30px 15px 60px;
-    text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	background-color: #f3f3f3;
+	list-style: outside none none;
+	margin: 0;
+	padding: 30px 15px 60px;
+	text-align: center;
 }
 
 #restaurants-list li {
-    display: inline;
-    background-color: #fff;
-    border: 2px solid #ccc;
-    font-family: Arial, sans-serif;
-    margin: 15px;
-    min-height: 380px;
-    padding: 0 30px 25px;
-    text-align: left;
+	display: inline;
+	background-color: #fff;
+	border: 2px solid #ccc;
+	font-family: Arial, sans-serif;
+	margin: 15px;
+	min-height: 380px;
+	padding: 0 30px 25px;
+	text-align: left;
 }
 
 #restaurants-list .restaurant-img {
-    background-color: #ccc;
-    display: block;
-    margin: 30px 0;
-    min-height: 248px;
-    width: 100%;
+	background-color: #ccc;
+	display: block;
+	margin: 30px 0;
+	min-height: 248px;
+	width: 100%;
 }
 
 #restaurants-list li h1 {
-    color: #f18200;
-    font-family: Arial, sans-serif;
-    font-size: 14pt;
-    font-weight: 200;
-    letter-spacing: 0;
-    line-height: 1.3;
-    margin: 20px 0 10px;
-    text-transform: uppercase;
+	color: #f18200;
+	font-family: Arial, sans-serif;
+	font-size: 14pt;
+	font-weight: 200;
+	letter-spacing: 0;
+	line-height: 1.3;
+	margin: 20px 0 10px;
+	text-transform: uppercase;
 }
 
 #restaurants-list p {
-    margin: 0;
-    font-size: 11pt;
+	margin: 0;
+	font-size: 11pt;
 }
 
 #restaurants-list li a {
-    background-color: orange;
-    border-bottom: 3px solid #eee;
-    color: #fff;
-    display: inline-block;
-    font-size: 10pt;
-    margin: 15px 0 0;
-    padding: 8px 30px 10px;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+	background-color: orange;
+	border-bottom: 3px solid #eee;
+	color: #fff;
+	display: inline-block;
+	font-size: 10pt;
+	margin: 15px 0 0;
+	padding: 8px 30px 10px;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
 }
 
 
 /* ====================== Restaurant Details ====================== */
 
 .inside header {
-    display: block;
+	display: block;
 }
 
 .inside #map {
-    background-color: #ccc;
-    height: 400px;
-    width: 100%;
+	background-color: #ccc;
+	height: 400px;
+	width: 100%;
 }
 
 .inside #footer {
-    width: 100%;
-    font-size: 0.9em;
-    letter-spacing: 0.2em;
-    background-color: #444;
-    color: #aaa;
-    padding: 25px;
-    text-align: center;
-    text-transform: uppercase;
-    box-sizing: border-box;
+	width: 100%;
+	font-size: 0.9em;
+	letter-spacing: 0.2em;
+	background-color: #444;
+	color: #aaa;
+	padding: 25px;
+	text-align: center;
+	text-transform: uppercase;
+	box-sizing: border-box;
 }
 
 #restaurant-name {
-    color: #f18200;
-    font-family: Arial, sans-serif;
-    font-size: 2em;
-    font-weight: 200;
-    letter-spacing: 0;
-    margin: 15px 0 30px;
-    text-transform: uppercase;
-    line-height: 1.1;
+	color: #f18200;
+	font-family: Arial, sans-serif;
+	font-size: 2em;
+	font-weight: 200;
+	letter-spacing: 0;
+	margin: 15px 0 0;
+	text-transform: uppercase;
+	line-height: 1.1;
+	width: 100%;
 }
 
 #restaurant-img {
-    width: 100%;
+	width: 100%;
 }
 
 #restaurant-address {
-    font-size: 12pt;
-    margin: 10px 0px;
+	font-size: 12pt;
+	margin: 10px 0px;
 }
 
 #restaurant-cuisine {
-    background-color: #333;
-    color: #ddd;
-    font-size: 12pt;
-    font-weight: 300;
-    letter-spacing: 10px;
-    margin: 0 0 20px;
-    padding: 2px 0;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
+	background-color: #333;
+	color: #ddd;
+	font-size: 12pt;
+	font-weight: 300;
+	letter-spacing: 10px;
+	margin: 0 0 20px;
+	padding: 2px 0;
+	text-align: center;
+	text-transform: uppercase;
+	width: 100%;
 }
 
 #restaurant-container,
 #reviews-container {
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 40px 40px 30px;
-    width: 100%;
-    box-sizing: border-box;
+	border-bottom: 1px solid #d9d9d9;
+	border-top: 1px solid #fff;
+	padding: 40px 40px 30px;
+	width: 100%;
+	box-sizing: border-box;
 }
 
 #reviews-container {
-    padding: 30px 40px 80px;
+	padding: 30px 40px 80px;
 }
 
 #reviews-container h2 {
-    color: #f58500;
-    font-size: 24pt;
-    font-weight: 300;
-    letter-spacing: -1px;
-    padding-bottom: 1pt;
+	color: #f58500;
+	font-size: 24pt;
+	font-weight: 300;
+	letter-spacing: -1px;
+	padding-bottom: 1pt;
 }
 
 #reviews-list {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 #reviews-list li {
-    background-color: #fff;
-    border: 2px solid #f3f3f3;
-    display: block;
-    list-style-type: none;
-    margin: 0 0 30px;
-    overflow: hidden;
-    padding: 0 0 20px;
-    position: relative;
-    width: 100%;
-    border-radius: 28px 0;
+	background-color: #fff;
+	border: 2px solid #f3f3f3;
+	display: block;
+	list-style-type: none;
+	margin: 0 0 30px;
+	overflow: hidden;
+	padding: 0 0 20px;
+	position: relative;
+	width: 100%;
+	border-radius: 28px 0;
 }
 
 #reviews-list li p {
-    position: relative;
-    margin: 0 0 10px;
-    padding: 0 16px;
+	position: relative;
+	margin: 0 0 10px;
+	padding: 0 16px;
 }
 
 #restaurant-hours td {
-    color: #666;
+	color: #666;
 }
 
-@media screen and (max-width: 30em) {
-    nav h1 a {
-        font-weight: 100;
-        letter-spacing: 10%;
-    }
-    .filter-options h2 {
-        display: none;
-    }
+@media screen and (max-width: 699px) {
+	#restaurants-list li {
+		width: calc(100% - 100px);
+	}
+	.filter-options h2 {
+		display: none;
+	}
+	.filter-options select {
+		width: 50%;
+	}
+	#restaurant-hours {
+		width: 100%;
+		padding: 2em;
+		margin: 0 auto;
+	}
+}
+
+@media screen and (min-width: 700px) and (max-width: 940px) {
+	#restaurants-list li {
+		width: calc(50% - 100px);
+	}
+	#restaurant-container {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	#restaurant-name {
+		width: 100%;
+	}
+	#restaurant-address {
+		width: 100%;
+	}
+	#restaurant-img {
+		width: 50%;
+		height: 50%;
+		order: 1;
+		box-sizing: border-box;
+	}
+	#restaurant-hours {
+		width: 50%;
+		padding: 0 2em;
+		order: 2;
+		box-sizing: border-box;
+	}
+	.filter-options select {
+		width: 50%;
+	}
+}
+
+@media screen and (min-width: 941px) {
+	#restaurants-list li {
+		width: calc(33% - 100px);
+	}
+	.filter-options select {
+		width: 50%;
+	}
+	#restaurant-container {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	#restaurant-name {
+		width: 100%;
+	}
+	#restaurant-address {
+		width: 100%;
+	}
+	#restaurant-img {
+		width: 50%;
+		height: 50%;
+		order: 1;
+		box-sizing: border-box;
+	}
+	#restaurant-hours {
+		width: 50%;
+		padding: 0 2em;
+		order: 2;
+		box-sizing: border-box;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	body {
+		width: 1200px;
+		margin: 0 auto;
+	}
 }
