feat: added keyboard map tabbing skip link

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,20 @@ p {
 	line-height: 1.5;
 }
 
+.skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background: #BF1722;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+    }
+    
+    .skip-link:focus { 
+    top: 0;
+    }
+
 body {
 	width: 100%;
 	margin: 0;
