--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,11 @@ a {
 
 a:hover,
 a:focus {
-	color: #3397db;
+	color: #3368db;
 	text-decoration: none;
+
+    box-shadow:  0 0 8px 3px
+     rgba(58, 65, 160, 0.8);
 }
 
 a img {
@@ -199,6 +202,13 @@ nav h1 a {
 	margin: 10px;
 	padding: 0 10px;
 	width: 200px;
+}
+
+.filter-options select:focus{
+    outline: 4px;
+    box-shadow:  0 0 8px 3px
+     rgba(255,255,255,0.8);
+
 }
 
 
