--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,6 @@ nav h1 a {
 	border: 2px solid #ccc;
 	font-family: Arial, sans-serif;
 	margin: 15px;
-	min-height: 380px;
 	padding: 0 30px 25px;
 	text-align: left;
 }
@@ -240,7 +239,6 @@ nav h1 a {
 	background-color: #ccc;
 	display: block;
 	margin: 30px 0;
-	min-height: 248px;
 	width: 100%;
 }
 
@@ -381,7 +379,7 @@ nav h1 a {
 	color: #666;
 }
 
-@media screen and (max-width: 699px) {
+@media screen and (max-width: 599px) {
 	#restaurants-list li {
 		width: calc(100% - 100px);
 	}
@@ -398,7 +396,7 @@ nav h1 a {
 	}
 }
 
-@media screen and (min-width: 700px) and (max-width: 940px) {
+@media screen and (min-width: 600px) and (max-width: 940px) {
 	#restaurants-list li {
 		width: calc(50% - 100px);
 	}
@@ -447,8 +445,7 @@ nav h1 a {
 		width: 100%;
 	}
 	#restaurant-img {
-		width: 50%;
-		height: 50%;
+		max-width: 50%;
 		order: 1;
 		box-sizing: border-box;
 	}
