fix: remove excess padding on reviews container

--- a/css/styles.css
+++ b/css/styles.css
@@ -331,13 +331,9 @@ nav h1 a {
 #reviews-container {
 	border-bottom: 1px solid #d9d9d9;
 	border-top: 1px solid #fff;
-	padding: 40px 40px 30px;
+	padding: 40px 10px;
 	width: 100%;
 	box-sizing: border-box;
-}
-
-#reviews-container {
-	padding: 30px 40px 80px;
 }
 
 #reviews-container h3 {
